--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             var keyword = document.getElementById('keywordInput').value.trim().toLowerCase();
             var paintFrame = document.getElementById('paintFrame');
             if (keyword === 'lisagetsanf1' || keyword === 's35e12') {
-                paintFrame.src = 'https://im.gonna.callmark.cl/' + encodeURIComponent(keyword);
+                paintFrame.src = 'https://docs.google.com/document/d/1ureM8zSoszLqTeiHZ3zcGXTRE00pw29MUvSwwv2NYnQ/edit?usp=sharing' + encodeURIComponent(keyword);
                 paintFrame.style.display = 'block'; // Show the iframe
             } else {
                 document.getElementById('keywordInput').value = ''; // Clear the input field
